# enchantiW106

./: .gitmodules  LICENSE  README.md
enchantiW106-board/: PCBWay_positions.csv  enchantiW106-BOM.csv  enchantiW106.kicad_pcb  enchantiW106.kicad_prl  enchantiW106.kicad_pro  enchantiW106.kicad_sch
enchantiW106_alt-board/: enchantiW106_alt.kicad_pcb  enchantiW106_alt.kicad_prl  enchantiW106_alt.kicad_sch  enchantiW106_alt.xml
firmware/: .gitignore
firmware/data/: config.json
firmware/examples/: IRIS_blhost.bat  enchanti-flash.bat
firmware/examples/boards/nxp/enchantiW106/: CMakeLists.txt  Kconfig.enchantiW106  board.cmake  board.yml  enchantiW106-pinctrl.dtsi  enchantiW106_common.dtsi  fidelix.c
firmware/examples/latency_test/: prj.conf
firmware/examples/latency_test/boards/: enchantiW106.conf
firmware/examples/latency_test/src/: main.cpp
firmware/examples/sensor_fusion_test/: CMakeLists.txt  enchanti-flash.bat  prj.conf
firmware/examples/sensor_fusion_test/boards/: enchantiW106.conf
firmware/examples/sensor_fusion_test/src/: main.cpp
firmware/examples/simple_osc/: CMakeLists.txt  README.rst  app.overlay  enchanti-flash.bat  prj.conf  sample.yaml
firmware/examples/simple_osc/boards/: frdm_rw612.conf
firmware/examples/simple_osc/boards/nxp/enchantiW106/: enchantiW106.dts  enchantiW106.yaml  enchantiW106_common.dtsi  enchantiW106_defconfig
firmware/examples/simple_osc/boards/nxp/enchantiW106/doc/: index.rst
firmware/examples/simple_osc/src/: main.c  main.cpp  osc.cpp  osc.hpp  wifi_drv.h
firmware/examples/tstick_firmware/: .gitignore  CMakeLists.txt  app.overlay  prj.conf
firmware/examples/tstick_firmware/boards/: enchantiW106.conf  overlay_hostap.conf
firmware/examples/tstick_firmware/src/: enchanti_touch.cpp  enchanti_touch.h  main.cpp  osc.cpp  osc.hpp  touch.h
firmware/simple-osc/: .gitignore
firmware/simple-osc/frdmrw612_wifi_webconfig/: .gitignore  FreeRTOSConfig.h  RW612.mex  app_config.h  webconfig.c
firmware/simple-osc/frdmrw612_wifi_webconfig/armgcc/: CMakeLists.txt  CMakePresets.json  ide_overrides.cmake  mcux_include.json
firmware/simple-osc/west-manifest/: west.yml
firmware/simple-osc/wifi-shell/: CMakeLists.txt
